CORE-43615: Moved RCS PLP mobile menu into handlebar template.

--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_listing/alshaya_rcs_listing.libraries.yml
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_listing/alshaya_rcs_listing.libraries.yml
@@ -40,3 +40,8 @@ promotional_banner:
   dependencies:
     - alshaya_white_label/promo-blocks
     - alshaya_white_label/rcs-ph-promotional-banner
+
+plp_mobile_menu:
+  version: 1.x
+  js:
+    handlebars/alshaya-rcs-plp-mobile-menu.handlebars: {}
