--- a/docroot/themes/custom/transac/alshaya_white_label/alshaya_white_label.libraries.yml
+++ b/docroot/themes/custom/transac/alshaya_white_label/alshaya_white_label.libraries.yml
@@ -61,6 +61,7 @@ slider_banner:
   dependencies:
     - core/jquery
     - core/drupal
+    - alshaya_white_label/utils
     - alshaya_white_label/slick
     - alshaya_white_label/alshaya_image_lazy_load
 
