CORE-44204: Moved product utility library version into yaml file.

--- a/docroot/modules/custom/alshaya_acm_product/alshaya_acm_product.libraries.yml
+++ b/docroot/modules/custom/alshaya_acm_product/alshaya_acm_product.libraries.yml
@@ -65,7 +65,7 @@ acq_product_info:
     js/alshaya_acm_product.pdp.v1.js: {}
 
 product_utility:
-  version: 1.x
+  version: 2.0
   js:
     js/alshaya_acm_product.utility.js: {}
   dependencies:
