CORE-42330: Created new library megamenu-shop-by-filter for FL Shop by Shoe Size styles.

--- a/docroot/themes/custom/transac/alshaya_white_label/alshaya_white_label.libraries.yml
+++ b/docroot/themes/custom/transac/alshaya_white_label/alshaya_white_label.libraries.yml
@@ -857,3 +857,8 @@ hello-member-become-member:
   css:
     theme:
       css/conditional-sass/hello-member-become-member/hello-member-become-member.ltr.css: {}
+
+megamenu-shop-by-filter:
+  css:
+    theme: 
+      css/conditional-sass/megamenu-shop-by-filter/megamenu-shop-by-filter.ltr.css: {}
