--- a/docroot/themes/custom/transac/alshaya_footlocker/alshaya_footlocker.info.yml
+++ b/docroot/themes/custom/transac/alshaya_footlocker/alshaya_footlocker.info.yml
@@ -195,3 +195,8 @@ libraries-override:
     css:
       theme:
         css/conditional-sass/megamenu-fullwidth-layout/megamenu-fullwidth-layout.ltr.css: css/conditional-sass/megamenu-fullwidth-layout/megamenu-fullwidth-layout.ltr.css
+
+  alshaya_white_label/megamenu-shop-by-filter:
+    css:
+      theme:
+        css/conditional-sass/megamenu-shop-by-filter/megamenu-shop-by-filter.ltr.css: css/conditional-sass/megamenu-shop-by-filter/megamenu-shop-by-filter.ltr.css
