--- a/docroot/modules/react/alshaya_main_menu_attribute_navigation/alshaya_main_menu_attribute_navigation.info.yml
+++ b/docroot/modules/react/alshaya_main_menu_attribute_navigation/alshaya_main_menu_attribute_navigation.info.yml
@@ -2,6 +2,6 @@ name: Alshaya Main Menu Attribute(s) Navigation
 type: module
 description: 'Module to implement Main Menu Attribute(s) Navigation.'
 package: 'Alshaya'
-core_version_requirement: ^8.8 || ^9
+core_version_requirement: ^9
 dependencies:
   - alshaya_react:alshaya_react
