--- a/docroot/modules/react/alshaya_main_menu_attribute_navigation/package.json
+++ b/docroot/modules/react/alshaya_main_menu_attribute_navigation/package.json
@@ -5,8 +5,6 @@
   "scripts": {
     "build:dev": "../node_modules/.bin/webpack --mode=development",
     "build": "../node_modules/.bin/webpack",
-    "watch": "../node_modules/.bin/webpack --watch",
-    "lint": "../node_modules/.bin/webpack --mode=development && ../node_modules/.bin/eslint js/**/**/*.js",
-    "lint:fix": "../node_modules/.bin/webpack --mode=development && ../node_modules/.bin/eslint js/**/**/*.js --fix"
+    "watch": "../node_modules/.bin/webpack --watch"
   }
 }
