CORE-42242: Updated the module and cleanup the code to use module configs.

--- a/docroot/modules/react/alshaya_shopby_filter_attribute/config/install/field.field.taxonomy_term.acq_product_category.field_shopby_filter_target_cid.yml
+++ b/docroot/modules/react/alshaya_shopby_filter_attribute/config/install/field.field.taxonomy_term.acq_product_category.field_shopby_filter_target_cid.yml
@@ -8,8 +8,8 @@ id: taxonomy_term.acq_product_category.field_shopby_filter_target_cid
 field_name: field_shopby_filter_target_cid
 entity_type: taxonomy_term
 bundle: acq_product_category
-label: 'Shop By Filters - Target Category ID'
-description: 'Shop by filters menu items (like shop by shoe size menu links) will link to given target category path.'
+label: 'Shop By Filter - Target Category ID'
+description: 'Shop by filter menu items (like shop by shoe size menu links) will link to given target category path.'
 required: false
 translatable: false
 skip_translation_check: 0
