--- a/docroot/modules/react/alshaya_shopby_filter_attribute/alshaya_shopby_filter_attribute.libraries.yml
+++ b/docroot/modules/react/alshaya_shopby_filter_attribute/alshaya_shopby_filter_attribute.libraries.yml
@@ -1,5 +1,5 @@
 menu_attribute_navigation:
-  version: 1.x
+  version: 1.0.0
   js:
     dist/menu_attribute_navigation.bundle.js: { }
   dependencies:
