--- a/tests/behat/templates/variables/brands/aeo/env/uat/markets/ae/ae.yml
+++ b/tests/behat/templates/variables/brands/aeo/env/uat/markets/ae/ae.yml
@@ -1,7 +1,7 @@
 variables:
-  spc_product_listing_page: '/shop-end-season/#query=jeans/'
-  spc_basket_page: '/shop-end-season/#query=jeans/'
-  product_listing_page_url: "/shop-end-season/#query=jeans/"
-  np_plp_page: '/shop-end-season/#query=jeans/'
-  np_plp_product_page: '/buy-ae-oxford-button-down-classic-fit-shirt-white.html/'
-  spc_pdp_page: '/buy-ae-oxford-button-down-classic-fit-shirt-white.html/'
+  spc_product_listing_page: '/shop-men/'
+  spc_basket_page: '/shop-men/'
+  product_listing_page_url: "/shop-men/"
+  np_plp_page: '/shop-men/'
+  np_plp_product_page: '/buy-ae-active-24-7-jogger-burgundy-ivy-0.html/'
+  spc_pdp_page: '/buy-ae-active-24-7-jogger-burgundy-ivy-0.html/'
