--- a/tests/behat/templates/variables/brands/fl/env/uat/markets/kw/kw.yml
+++ b/tests/behat/templates/variables/brands/fl/env/uat/markets/kw/kw.yml
@@ -1,7 +1,7 @@
 variables:
-  spc_product_listing_page: '/shop-kids/'
-  spc_basket_page: '/shop-kids/'
-  spc_pdp_page: '/buy-air-jordan-classic-99-jumpman-air-cap-black-green-white.html/'
-  product_listing_page_url: '/shop-kids/'
-  np_plp_product_page: '/buy-air-jordan-classic-99-jumpman-air-cap-black-green-white.html/'
-  np_plp_page: '/shop-kids/'
+  spc_product_listing_page: '/shop-kids/upto-4-years/shoes/'
+  spc_basket_page: '/shop-kids/upto-4-years/shoes/'
+  spc_pdp_page: '/buy-adidas-continental-80-mens-shoes-white-white-white.html/'
+  product_listing_page_url: '/shop-kids/upto-4-years/shoes/'
+  np_plp_product_page: '/buy-adidas-continental-80-mens-shoes-white-white-white.html/'
+  np_plp_page: '/shop-kids/upto-4-years/shoes/'
