--- a/tests/behat/templates/variables/brands/pbk/env/uat/markets/kw/kw.yml
+++ b/tests/behat/templates/variables/brands/pbk/env/uat/markets/kw/kw.yml
@@ -1,6 +1,6 @@
 variables:
-  url_product_page: 'buy-slub-jersey-henley-shirt-green-grey-marl-0.html'
-  spc_pdp_page: 'buy-wild-beauty-jana-blankenship.html'
-  product_listing_page_url: '/shop-outdoor/shop-category/outdoor-dining-furniture/'
-  spc_product_listing_page: '/shop-outdoor/shop-category/outdoor-dining-furniture/'
-  spc_basket_page: '/shop-outdoor/shop-category/outdoor-dining-furniture/'
+  url_product_page: '/buy-ollie-baby-bedding-set-3.html/'
+  spc_pdp_page: '/buy-ollie-baby-bedding-set-3.html/'
+  product_listing_page_url: '/shop-bedding-pajamas/'
+  spc_product_listing_page: '/shop-bedding-pajamas/'
+  spc_basket_page: '/shop-bedding-pajamas/'
