--- a/tests/behat/templates/variables/brands/tbs/env/uat/markets/kw/kw.yml
+++ b/tests/behat/templates/variables/brands/tbs/env/uat/markets/kw/kw.yml
@@ -1,6 +1,6 @@
 variables:
-  url_product_page: '/buy-lip-cheek-stain.html/'
+  url_product_page: '/buy-seaweed-pore-cleansing-exfoliator.html/'
   product_listing_page_url: '/shop-bestsellers/'
   spc_product_listing_page: '/shop-bestsellers/'
   spc_basket_page: '/shop-bestsellers/'
-  spc_pdp_page: '/buy-lip-cheek-stain.html/'
+  spc_pdp_page: '/buy-seaweed-pore-cleansing-exfoliator.html/'
