--- a/docroot/modules/custom/alshaya_i18n/alshaya_i18n.services.yml
+++ b/docroot/modules/custom/alshaya_i18n/alshaya_i18n.services.yml
@@ -1,6 +1,6 @@
 services:
   alshaya_i18n.request_subscriber:
     class: Drupal\alshaya_i18n\EventSubscriber\AlshayaI18nRequestSubscriber
-    arguments: ['@url_generator', '@language_manager', '@config.factory', '@page_cache_kill_switch']
+    arguments: ['@url_generator', '@language_manager', '@config.factory', '@renderer']
     tags:
       - { name: event_subscriber }
