CORE-44402: Site setup on local for FE Work.

--- a/blt/alshaya_local_sites.yml
+++ b/blt/alshaya_local_sites.yml
@@ -314,3 +314,31 @@ sites:
     module: alshaya_dh
     type: alshaya_transac
     country: jo
+  aykw:
+    module: alshaya_ay
+    type: alshaya_transac
+    country: kw
+  aysa:
+    module: alshaya_ay
+    type: alshaya_transac
+    country: sa
+  ayae:
+    module: alshaya_ay
+    type: alshaya_transac
+    country: ae
+  ayeg:
+    module: alshaya_ay
+    type: alshaya_transac
+    country: eg
+  aybh:
+    module: alshaya_ay
+    type: alshaya_transac
+    country: bh
+  ayqa:
+    module: alshaya_ay
+    type: alshaya_transac
+    country: qa
+  ayjo:
+    module: alshaya_ay
+    type: alshaya_transac
+    country: jo
