CORE-00: Update GA to latest ubuntu.

--- a/.github/workflows/non_transac.yml
+++ b/.github/workflows/non_transac.yml
@@ -12,7 +12,7 @@ defaults:
 jobs:
   validate:
     name: Validate
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
 
     container:
       image: devwithlando/php:7.4-fpm-4
