--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -47,7 +47,7 @@ jobs:
 
   validate:
     name: Validate
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     needs: changedfiles
     if: ${{ github.event_name == 'pull_request' && (needs.changedfiles.outputs.composer || needs.changedfiles.outputs.docroot) }}
 
