CORE-43618: Removed drupal 8 core dependency for rcs media assets.

--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_assets/alshaya_rcs_assets.info.yml
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_assets/alshaya_rcs_assets.info.yml
@@ -1,6 +1,6 @@
 name: Alshaya RCS Media Assets
 description: Implementation of Media Assets in RCS.
 type: module
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^9
 dependencies:
   - alshaya_media_assets:alshaya_media_assets
