DIG-11745: Added the online returns cart banner.

--- a/docroot/modules/react/alshaya_online_returns/config/install/alshaya_online_returns.settings.yml
+++ b/docroot/modules/react/alshaya_online_returns/config/install/alshaya_online_returns.settings.yml
@@ -1,1 +1,2 @@
 status: true # Config to enable/disable Online Returns feature.
+cart_banner: true # Config to enable/disable Online Returns cart banner.
