--- a/tests/behat/templates/variables/brands/aeo/env/uat/markets/kw/kw.yml
+++ b/tests/behat/templates/variables/brands/aeo/env/uat/markets/kw/kw.yml
@@ -5,4 +5,4 @@ variables:
   np_plp_page: '/american-eagle/shop-mens/'
   np_plp_product_page: '/american-eagle/buy-aerie-satin-ruffle-nightie-white.html/'
   spc_pdp_page: '/american-eagle/buy-aerie-satin-ruffle-nightie-white.html/'
-  np_promotion: 0
+  spc_egift_page: '/egift/'
