--- a/tests/behat/templates/variables/brands/bbw/env/prod/markets/ae/ae.yml
+++ b/tests/behat/templates/variables/brands/bbw/env/prod/markets/ae/ae.yml
@@ -6,3 +6,4 @@ variables:
   spc_pdp_page: '/buy-mahogany-teakwood-high-intensity-3-wick-candle.html/'
   spc_plp_add_to_cart: '/shop-body-care/moisturizers/hand-care/'
   spc_plp_add_to_cart_single: '/shop-candles/featured/white-barn-shop/'
+  spc_egift_page: '/egift/'
