--- a/tests/behat/templates/variables/brands/bbw/env/prod/markets/kw/kw.yml
+++ b/tests/behat/templates/variables/brands/bbw/env/prod/markets/kw/kw.yml
@@ -6,3 +6,4 @@ variables:
   spc_pdp_page: '/buy-thousand-wishes-glowing-body-scrub.html/'
   spc_plp_add_to_cart: '/shop-candles/'
   spc_plp_add_to_cart_single: '/shop-candles/all-candles/3-wick-candles/'
+  spc_egift_page: '/egift/'
