--- a/tests/behat/templates/variables/brands/fl/env/prod/markets/sa/sa.yml
+++ b/tests/behat/templates/variables/brands/fl/env/prod/markets/sa/sa.yml
@@ -7,3 +7,4 @@ variables:
   np_plp_product_page: '/shop-womens/shoes/slides/'
   np_plp_page: '/shop-mens/accessories/underwear/'
   new_pdp_enabled: TRUE
+  spc_egift_page: '/egift/'
