--- a/tests/behat/templates/variables/brands/hm/env/prod/markets/kw/kw.yml
+++ b/tests/behat/templates/variables/brands/hm/env/prod/markets/kw/kw.yml
@@ -5,3 +5,4 @@ variables:
   spc_basket_page: '/shop-divided/sustainability/our-products/'
   spc_pdp_page: '/buy-semi-transparent-lipstick-bohemienne.html/'
   spc_promotion_listing_page: '/buy-semi-transparent-lipstick-bohemienne.html/'
+  spc_egift_page: '/egift/'
