--- a/tests/behat/templates/variables/brands/muji/env/prod/markets/ae/ae.yml
+++ b/tests/behat/templates/variables/brands/muji/env/prod/markets/ae/ae.yml
@@ -7,3 +7,4 @@ variables:
   spc_promotion_listing_page: '//'
   spc_single_product_detail_page_coupon: 'buy-french-linen-washed-stand-collar-shirt-natural.html'
   spc_bank_product: '/shop-new/'
+  spc_egift_page: '/egift/'
