--- a/tests/behat/templates/variables/brands/muji/env/prod/markets/sa/sa.yml
+++ b/tests/behat/templates/variables/brands/muji/env/prod/markets/sa/sa.yml
@@ -7,3 +7,4 @@ variables:
   spc_promotion_listing_page: '//'
   spc_single_product_detail_page_coupon: '/buy-polyester-2-way-foldable-easy-close-umbrella-53-cm-black-black.html/'
   spc_bank_product: '/shop-fashion-sneakers/'
+  spc_egift_page: '/egift/'
