--- a/tests/behat/templates/variables/brands/vs/env/prod/markets/kw/kw.yml
+++ b/tests/behat/templates/variables/brands/vs/env/prod/markets/kw/kw.yml
@@ -2,7 +2,8 @@ variables:
   url_product_page: 'buy-slub-jersey-henley-shirt-green-grey-marl-0.html'
   product_listing_page_url: 'beauty/shop-mist-body/categories/body-mists/'
   spc_product_listing_page: '/beauty/shop-mist-body/categories/body-mists/'
-  spc_pdp_page: '/buy-fragrance-mists-amber-romance.html/'
+  spc_pdp_page: '/victorias-secret/buy-natural-beauty-fragrance-mist-lavender-vanilla.html/'
   spc_basket_page: '/beauty/shop-mist-body/categories/body-mists/'
   spc_plp_add_to_cart_single: '/beauty/shop-bags-accessories/bags/shoulder-bags/'
   spc_plp_add_to_cart: '/victorias-secret/shop-lingerie/styles/slips/'
+  spc_egift_page: '/egift/'
