--- a/tests/behat/templates/variables/brands/westelm/env/prod/markets/kw/kw.yml
+++ b/tests/behat/templates/variables/brands/westelm/env/prod/markets/kw/kw.yml
@@ -5,3 +5,4 @@ variables:
   spc_basket_page: '/shop-holiday/holiday-decor/decor-cushions/'
   spc_pdp_page: '/buy-mill-ceramic-dinner-plates-set-4.html/'
   spc_sofa_page: '/shop-furniture/living-room-furniture/sofas-sectionals/'
+  spc_egift_page: '/egift/'
