--- a/tests/behat/templates/variables/brands/aeo/env/prod/markets/sa/sa.yml
+++ b/tests/behat/templates/variables/brands/aeo/env/prod/markets/sa/sa.yml
@@ -3,6 +3,6 @@ variables:
   spc_basket_page: '/shop-women/dresses-jumpsuits/dresses/'
   product_listing_page_url: "/shop-women/dresses-jumpsuits/dresses/"
   np_plp_page: '/shop-women/dresses-jumpsuits/dresses/'
-  np_plp_product_page: '/buy-ae-terry-bucket-visor-olive.html/'
-  spc_pdp_page: '/buy-ae-terry-bucket-visor-olive.html'
+  np_plp_product_page: '/buy-ae-super-soft-slub-striped-henley-t-shirt-blue.html/'
+  spc_pdp_page: '/buy-ae-super-soft-slub-striped-henley-t-shirt-blue.html/'
   np_promotion: 0
