--- a/tests/behat/templates/variables/brands/bbw/env/prod/markets/sa/sa.yml
+++ b/tests/behat/templates/variables/brands/bbw/env/prod/markets/sa/sa.yml
@@ -6,3 +6,4 @@ variables:
   spc_pdp_page: '/buy-cactus-blossom-3-wick-candle-0.html/'
   spc_promotion_listing_page: '/shop-hand-soaps-sanitizers/hand-sanitizers/pocketbac-hand-sanitizers/'
   spc_plp_add_to_cart: '/shop-home-fragrance/featured/white-barn-shop/'
+  spc_egift_page: '/egift/'
