--- a/tests/behat/templates/variables/brands/bbw/env/uat/markets/ae/ae.yml
+++ b/tests/behat/templates/variables/brands/bbw/env/uat/markets/ae/ae.yml
@@ -8,3 +8,4 @@ variables:
   spc_single_product_detail_page_no_coupon: '/buy-orange-ginger-pumice-body-scrub.html/'
   spc_multiple_product_detail_page_no_coupon: '/buy-orange-ginger-pumice-body-scrub.html/'
   spc_promotion_listing_page: '/buy-orange-ginger-pumice-body-scrub.html/'
+  spc_egift_page: '/egift/'
