--- a/tests/behat/templates/variables/brands/bp/env/prod/markets/kw/kw.yml
+++ b/tests/behat/templates/variables/brands/bp/env/prod/markets/kw/kw.yml
@@ -9,3 +9,4 @@ variables:
   spc_multiple_product_detail_page_coupon: '/buy-inecto-naturals-moisturising-coconut-hair-mask.html/'
   spc_single_product_detail_page_no_coupon: '/buy-inecto-naturals-moisturising-coconut-hair-mask.html/'
   spc_plp_add_to_cart_single: '/shop-personal-care-bath-body/'
+  spc_egift_page: '/egift/'
