--- a/tests/behat/templates/variables/brands/cos/env/prod/markets/sa/sa.yml
+++ b/tests/behat/templates/variables/brands/cos/env/prod/markets/sa/sa.yml
@@ -4,3 +4,4 @@ variables:
   spc_product_listing_page: '/shop-new-arrivals/women-new-arrivals/'
   spc_basket_page: '/shop-new-arrivals/women-new-arrivals/'
   spc_pdp_page: 'buy-oversized-gathered-dress-beige.html'
+  spc_egift_page: '/egift/'
