--- a/tests/behat/templates/variables/brands/cos/env/uat/markets/kw/kw.yml
+++ b/tests/behat/templates/variables/brands/cos/env/uat/markets/kw/kw.yml
@@ -4,3 +4,4 @@ variables:
   spc_product_listing_page: '/shop-women/dresses/midi-dresses/'
   spc_basket_page: '/shop-women/dresses/midi-dresses/'
   spc_pdp_page: '/buy-relaxed-fit-knitted-polo-shirt-beige.html/'
+  spc_egift_page: '/egift/'
