--- a/tests/behat/templates/variables/brands/cos/env/uat/markets/sa/sa.yml
+++ b/tests/behat/templates/variables/brands/cos/env/uat/markets/sa/sa.yml
@@ -4,3 +4,4 @@ variables:
   spc_product_listing_page: '/shop-new-main-category/'
   spc_basket_page: '/shop-new-main-category/'
   spc_pdp_page: 'buy-relaxed-fit-t-shirt-blue.html'
+  spc_egift_page: '/egift/'
