--- a/tests/behat/templates/variables/brands/fl/env/prod/markets/ae/ae.yml
+++ b/tests/behat/templates/variables/brands/fl/env/prod/markets/ae/ae.yml
@@ -6,3 +6,4 @@ variables:
   np_plp_product_page: '/buy-champion-womens-t-shirt-black-0.html/'
   np_plp_page: '/shop-mens/shoes/basketball/'
   new_pdp_enabled: TRUE
+  spc_egift_page: '/egift/'
