--- a/tests/behat/templates/variables/brands/fl/env/uat/markets/sa/sa.yml
+++ b/tests/behat/templates/variables/brands/fl/env/uat/markets/sa/sa.yml
@@ -8,3 +8,4 @@ variables:
   np_plp_product_page: '/buy-nike-3-pack-quarter-socks-white-white.html/'
   np_plp_page: '/shop-womens/'
   spc_plp_add_to_cart: '/shop-womens/'
+  spc_egift_page: '/egift/'
