--- a/tests/behat/templates/variables/brands/hm/env/prod/markets/ae/ae.yml
+++ b/tests/behat/templates/variables/brands/hm/env/prod/markets/ae/ae.yml
@@ -1,5 +1,6 @@
 variables:
-  spc_product_listing_page: '/shop-women/shop-product/beauty/'
-  spc_basket_page: '/shop-women/shop-product/beauty/'
-  product_listing_page_url: '/shop-women/shop-product/beauty/'
+  spc_product_listing_page: '/shop-women/new-arrivals/beauty/'
+  spc_basket_page: '/shop-women/new-arrivals/beauty/'
+  product_listing_page_url: '/shop-women/new-arrivals/beauty/'
   spc_pdp_page: '/buy-gel-nail-polish-sweetheart.html/'
+  spc_egift_page: '/egift/'
