--- a/tests/behat/templates/variables/brands/hm/env/prod/markets/sa/sa.yml
+++ b/tests/behat/templates/variables/brands/hm/env/prod/markets/sa/sa.yml
@@ -4,3 +4,4 @@ variables:
   spc_product_listing_page: '/shop-women/new-arrivals/shoes-accessories/'
   spc_basket_page: '/shop-beauty/shop-product/eyes/'
   spc_pdp_page: '/buy-short-sequined-dress-black-silver-coloured.html/'
+  spc_egift_page: '/egift/'
