--- a/tests/behat/templates/variables/brands/hm/env/uat/markets/sa/sa.yml
+++ b/tests/behat/templates/variables/brands/hm/env/uat/markets/sa/sa.yml
@@ -5,3 +5,4 @@ variables:
   spc_basket_page: '/shop-men/new-arrivals/clothes/'
   spc_pdp_page: 'buy-linen-blend-t-shirt-beige.html'
   spc_promotion_listing_page: '/buy-linen-blend-t-shirt-beige.html/'
+  spc_egift_page: '/egift/'
