--- a/tests/behat/templates/variables/brands/muji/env/uat/markets/kw/kw.yml
+++ b/tests/behat/templates/variables/brands/muji/env/uat/markets/kw/kw.yml
@@ -6,3 +6,4 @@ variables:
   spc_plp_add_to_cart_single: '/shop-fashion-dresses/'
   spc_promotion_listing_page: '//'
   spc_single_product_detail_page_coupon: 'buy-steel-measure-etc.html'
+  spc_egift_page: '/egift/'
