--- a/tests/behat/templates/variables/brands/muji/env/uat/markets/sa/sa.yml
+++ b/tests/behat/templates/variables/brands/muji/env/uat/markets/sa/sa.yml
@@ -6,3 +6,4 @@ variables:
   spc_plp_add_to_cart_single: '/shop-furniture-sofas-chairs-covers/'
   spc_promotion_listing_page: '//'
   spc_single_product_detail_page_coupon: 'buy-correction-tape-catridge.html'
+  spc_egift_page: '/egift/'
