--- a/tests/behat/templates/variables/brands/pb/env/prod/markets/ae/ae.yml
+++ b/tests/behat/templates/variables/brands/pb/env/prod/markets/ae/ae.yml
@@ -3,3 +3,4 @@ variables:
   spc_basket_page: '/shop-furniture/home-office/bookcases-shelves/'
   spc_pdp_page: '/buy-north-reclaimed-wood-platform-bed.html/'
   product_listing_page_url: "/shop-furniture/home-office/bookcases-shelves/"
+  spc_egift_page: '/egift/'
