--- a/tests/behat/templates/variables/brands/pb/env/prod/markets/kw/kw.yml
+++ b/tests/behat/templates/variables/brands/pb/env/prod/markets/kw/kw.yml
@@ -4,3 +4,4 @@ variables:
   product_listing_page_url: '/shop-outdoor/shop-category/outdoor-dining-furniture/'
   spc_product_listing_page: '/shop-outdoor/shop-category/outdoor-dining-furniture/'
   spc_basket_page: '/shop-outdoor/shop-category/outdoor-dining-furniture/'
+  spc_egift_page: '/egift/'
