--- a/tests/behat/templates/variables/brands/pb/env/prod/markets/sa/sa.yml
+++ b/tests/behat/templates/variables/brands/pb/env/prod/markets/sa/sa.yml
@@ -5,3 +5,4 @@ variables:
   spc_product_listing_page: '/shop-bedding/shop-category/duvet-covers-pillowcases/'
   spc_basket_page: '/shop-outdoor/shop-category/outdoor-dining-furniture/'
   spc_bank_product: '/shop-furniture/living-room/leather-furniture/'
+  spc_egift_page: '/egift/'
