--- a/tests/behat/templates/variables/brands/pb/env/uat/markets/ae/ae.yml
+++ b/tests/behat/templates/variables/brands/pb/env/uat/markets/ae/ae.yml
@@ -4,3 +4,4 @@ variables:
   spc_basket_page: '/shop-bedding/'
   spc_pdp_page: '/buy-abbott-rectangular-coffee-table.html/'
   spc_bank_product: '/buy-abbott-rectangular-coffee-table.html/'
+  spc_egift_page: '/egift/'
