--- a/tests/behat/templates/variables/brands/pb/env/uat/markets/sa/sa.yml
+++ b/tests/behat/templates/variables/brands/pb/env/uat/markets/sa/sa.yml
@@ -3,3 +3,4 @@ variables:
   spc_pdp_page: '/buy-chevron-wool-jute-rug.html/'
   spc_product_listing_page: '/shop-furniture/'
   spc_basket_page: '/buy-chevron-wool-jute-rug.html/'
+  spc_egift_page: '/egift/'
