--- a/tests/behat/templates/variables/brands/pbk/env/prod/markets/ae/ae.yml
+++ b/tests/behat/templates/variables/brands/pbk/env/prod/markets/ae/ae.yml
@@ -3,3 +3,4 @@ variables:
   spc_basket_page: '/shop-furniture/kids-bedroom-furniture/beds/'
   spc_pdp_page: '/buy-avalon-bed-0.html/'
   product_listing_page_url: "/shop-furniture/kids-bedroom-furniture/beds/"
+  spc_egift_page: '/egift/'
