--- a/tests/behat/templates/variables/brands/pbk/env/prod/markets/kw/kw.yml
+++ b/tests/behat/templates/variables/brands/pbk/env/prod/markets/kw/kw.yml
@@ -4,3 +4,4 @@ variables:
   product_listing_page_url: '/shop-furniture/kids-bedroom-furniture/beds/'
   spc_product_listing_page: '/shop-furniture/kids-bedroom-furniture/beds/'
   spc_basket_page: '/shop-furniture/kids-bedroom-furniture/beds/'
+  spc_egift_page: '/egift/'
