--- a/tests/behat/templates/variables/brands/tbs/env/prod/markets/eg/eg.yml
+++ b/tests/behat/templates/variables/brands/tbs/env/prod/markets/eg/eg.yml
@@ -7,3 +7,4 @@ variables:
   spc_promotion_listing_page: ''
   spc_plp_add_to_cart: '/shop-face-masks/'
   spc_plp_add_to_cart_single: '/shop-vegan-make/'
+  spc_egift_page: '/egift/'
