--- a/tests/behat/templates/variables/brands/tbs/env/prod/markets/kw/kw.yml
+++ b/tests/behat/templates/variables/brands/tbs/env/prod/markets/kw/kw.yml
@@ -7,3 +7,4 @@ variables:
   spc_promotion_listing_page: '/ /'
   spc_plp_add_to_cart: '/shop-cleansers-toners/'
   spc_plp_add_to_cart_single: '/shop-accessories-tools/'
+  spc_egift_page: '/egift/'
