--- a/tests/behat/templates/variables/brands/tbs/env/uat/markets/eg/eg.yml
+++ b/tests/behat/templates/variables/brands/tbs/env/uat/markets/eg/eg.yml
@@ -5,3 +5,4 @@ variables:
   spc_basket_page: '/shop-bestsellers/'
   spc_pdp_page: 'buy-organic-cotton-rounds-100-pieces.html'
   spc_promotion_listing_page: ''
+  spc_egift_page: '/egift/'
