--- a/tests/behat/templates/variables/brands/vs/env/prod/markets/ae/ae.yml
+++ b/tests/behat/templates/variables/brands/vs/env/prod/markets/ae/ae.yml
@@ -1,7 +1,8 @@
 variables:
   spc_product_listing_page: '/beauty/shop-pink-beauty/body/body-mists/'
   spc_basket_page: '/beauty/shop-pink-beauty/body/body-mists/'
-  spc_pdp_page: '/beauty/buy-fragrant-body-lotion-all-dream.html/'
+  spc_pdp_page: '/beauty/buy-rainkissed-floral-body-mist-sunflower-glow.html/'
   product_listing_page_url: '/beauty/shop-pink-beauty/body/body-mists/'
   spc_plp_add_to_cart_single: '/beauty/shop-bags-accessories/bags/travel-luggage/'
   spc_plp_add_to_cart: '/victorias-secret/shop-bras/styles/wireless/'
+  spc_egift_page: '/egift/'
