--- a/tests/behat/templates/variables/brands/vs/env/uat/markets/ae/ae.yml
+++ b/tests/behat/templates/variables/brands/vs/env/uat/markets/ae/ae.yml
@@ -3,3 +3,4 @@ variables:
   spc_basket_page: '/victorias-secret/shop-mapp/'
   product_listing_page_url: '/victorias-secret/shop-mapp/'
   spc_pdp_page: '/buy-lightly-lined-wireless-bra-mermaid-teal-wide-shine-logo-straps-0.html/'
+  spc_egift_page: '/egift/'
