--- a/tests/behat/templates/variables/brands/westelm/env/uat/markets/kw/kw.yml
+++ b/tests/behat/templates/variables/brands/westelm/env/uat/markets/kw/kw.yml
@@ -5,3 +5,4 @@ variables:
   spc_basket_page: '/#query=sofa'
   spc_pdp_page: '/buy-mid-century-upholstered-dining-chair-metal-legs.html/'
   spc_sofa_page: '/buy-auburn-sofa-70-1.html/'
+  spc_egift_page: '/egift/'
