--- a/docroot/themes/custom/transac_lite/kidzania/kidzania.info.yml
+++ b/docroot/themes/custom/transac_lite/kidzania/kidzania.info.yml
@@ -3,7 +3,7 @@ description: Theme for KidZania brand - Transac Lite.
 type: theme
 core: 8.x
 core_version_requirement: ^8 || ^9
-base theme: cog
+base theme: stable
 alshaya_theme_type: alshaya_transac_lite
 
 regions:
