CORE-42994: Added cache tags invalidator for product category tree.

--- a/docroot/modules/react/alshaya_shopby_filter_attribute/drush.services.yml
+++ b/docroot/modules/react/alshaya_shopby_filter_attribute/drush.services.yml
@@ -1,6 +1,6 @@
 services:
   alshaya_shopby_filter_attribute.commands:
     class: Drupal\alshaya_shopby_filter_attribute\Commands\AlshayaShopByFilterAttributeCommands
-    arguments: [ '@config.factory' ]
+    arguments: [ '@config.factory', '@cache_tags.invalidator' ]
     tags:
       - { name: drush.command }
