CORE-35123: Added conditions to ensure that content urls are not conflicted with rcs paths.

--- a/docroot/modules/custom/rcs_placeholders/rcs_placeholders.services.yml
+++ b/docroot/modules/custom/rcs_placeholders/rcs_placeholders.services.yml
@@ -19,3 +19,9 @@ services:
     class: Drupal\rcs_placeholders\EventSubscriber\ExternalHreflangGetCurrentUrlEventSubscriber
     tags:
       - { name: 'event_subscriber' }
+
+
+  rcs_placeholders.path_prefix_helper:
+    class: Drupal\rcs_placeholders\Service\RcsPhPathPrefixHelper
+    arguments:
+      - '@config.factory'
