CORE-44483: Site setup on local for FE Work.

--- a/docroot/modules/brands/alshaya_nb/alshaya_nb.info.yml
+++ b/docroot/modules/brands/alshaya_nb/alshaya_nb.info.yml
@@ -1,4 +1,4 @@
-name: 'Alshaya New Balance (Transac)'
+name: 'Alshaya New Balance'
 type: module
 description: 'The dedicated module for New Balance brand.'
 package: Alshaya
