--- a/docroot/themes/custom/transac/alshaya_new_balance/alshaya_new_balance.info.yml
+++ b/docroot/themes/custom/transac/alshaya_new_balance/alshaya_new_balance.info.yml
@@ -23,6 +23,7 @@ regions:
   footer_secondary: 'Footer Secondary'
 
 libraries:
+  - alshaya_new_balance/global_styles
   - alshaya_white_label/ucfix
 
 libraries-override:
