CORE-44767: Added module dependency.

--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_online_returns/alshaya_rcs_online_returns.info.yml
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_online_returns/alshaya_rcs_online_returns.info.yml
@@ -2,3 +2,5 @@ name: Alshaya RCS Online Returns
 type: module
 description: Alshaya RCS implementation of Online Returns
 core_version_requirement: ^8 || ^9
+dependencies:
+  - alshaya_online_returns:alshaya_online_returns
