--- a/docroot/themes/custom/transac/alshaya_new_balance/alshaya_new_balance.info.yml
+++ b/docroot/themes/custom/transac/alshaya_new_balance/alshaya_new_balance.info.yml
@@ -36,3 +36,8 @@ libraries-override:
     css:
       theme:
         css/ltr-print.css: css/rtl-print.css
+
+  alshaya_white_label/font-face:
+    css:
+      theme:
+        css/conditional-sass/font-face/font-face.ltr.css: css/conditional-sass/font-face/font-face.ltr.css
