CORE-43822: Secret-keys-added for PPROD and PROD.

--- a/tests/behat/templates/variables/common.yml
+++ b/tests/behat/templates/variables/common.yml
@@ -1,7 +1,6 @@
 variables:
   url_login: '/user/login'
-  url_register: '/user/register?'
-  behat_secret_key: 'behat=6548ffa6b2bc4b7652ba1dc90133b3d0'
+  url_register: '/user/register'
   spc_checkout_card: "4543474002249996"
   spc_checkout_expiry: "09/22"
   spc_checkout_cvv: "956"
@@ -26,4 +25,3 @@ variables:
   spc_mada_visa_card_expiry: '09/22'
   spc_mada_visa_card_cvv: '257'
   spc_mada_password: 'Checkout1!'
-
