CORE-44903: Used product urls from mdc when config is set.

--- a/docroot/modules/custom/alshaya_acm/config/install/alshaya_acm.settings.yml
+++ b/docroot/modules/custom/alshaya_acm/config/install/alshaya_acm.settings.yml
@@ -7,3 +7,4 @@ quantity_limit_enabled: FALSE
 display_upsell: TRUE # Show / Hide upsell product on PDP.
 display_related: TRUE # Show / Hide related product on PDP.
 hide_max_qty_limit_message: FALSE
+use_mdc_url: false
