CORE-44882: Display Quick Add - UI.

--- a/docroot/themes/custom/transac/alshaya_white_label/alshaya_white_label.libraries.yml
+++ b/docroot/themes/custom/transac/alshaya_white_label/alshaya_white_label.libraries.yml
@@ -863,3 +863,8 @@ megamenu-shop-by-filter:
   css:
     theme: 
       css/conditional-sass/megamenu-shop-by-filter/megamenu-shop-by-filter.ltr.css: {}
+
+plp-quick-add:
+  css:
+    theme:
+      css/conditional-sass/plp-quick-add/plp-quick-add.ltr.css: {}
