CORE-43621: Optimize template rendering by pre-compiling HandlebarJS templates.

--- a/docroot/modules/custom/rcs_handlebars/rcs_handlebars.services.yml
+++ b/docroot/modules/custom/rcs_handlebars/rcs_handlebars.services.yml
@@ -1,4 +1,7 @@
 services:
   rcs_handlebars.service:
     class: Drupal\rcs_handlebars\Service\HandlebarsService
-    arguments: ['@file_system', '@module_handler']
+    arguments:
+      - '@file_system'
+      - '@module_handler'
+      - '@config.factory'
