--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_seo/alshaya_rcs_seo.libraries.yml
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_seo/alshaya_rcs_seo.libraries.yml
@@ -19,5 +19,5 @@ alshaya_rcs_product_seo:
 sitemap:
   version: 1x
   js:
-    handlebars/alshaya-rcs-sitemap.handlebars: {}
+    handlebars/sitemap.handlebars: {}
     dist/alshaya_rcs_seo_renderer.bundle.js: {}
