--- a/docroot/modules/brands/alshaya_cos/modules/alshaya_cos_transac_rcs/alshaya_cos_transac_rcs.libraries.yml
+++ b/docroot/modules/brands/alshaya_cos/modules/alshaya_cos_transac_rcs/alshaya_cos_transac_rcs.libraries.yml
@@ -9,14 +9,14 @@ product:
 product.block.description:
   version: 1.x
   js:
-    handlebars/rcs-product-description-block.handlebars: { }
+    handlebars/product.block.description.handlebars: { }
 
 product.block.description_details:
   version: 1.x
   js:
-    handlebars/rcs-product-description-details-block.handlebars: { }
+    handlebars/product.block.description_details.handlebars: { }
 
 product.block.short_description.pdp-magazine:
   version: 1.x
   js:
-    handlebars/rcs-product-short-description-full-magazine-block.handlebars: { }
+    handlebars/product.block.short_description.pdp-magazine.handlebars: { }
