CORE-44937: Check also blt folder.

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -85,6 +85,7 @@ jobs:
       - name: echo changed files
         run: |
           echo ${{needs.changedfiles.outputs.composer}}
+          echo ${{needs.changedfiles.outputs.blt}}
           echo ${{needs.changedfiles.outputs.docroot}}
           echo ${{needs.changedfiles.outputs.js}}
           echo ${{needs.changedfiles.outputs.scss}}
