--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -51,7 +51,7 @@ jobs:
     name: Validate
     runs-on: ubuntu-latest
     needs: changedfiles
-    if: ${{ github.event_name == 'pull_request' && (needs.changedfiles.outputs.composer || needs.changedfiles.outputs.docroot) }}
+    if: ${{ github.event_name == 'pull_request' && (needs.changedfiles.outputs.composer || needs.changedfiles.outputs.docroot || needs.changedfiles.outputs.blt) }}
 
     container:
       image: devwithlando/php:8.0-fpm-4
