CORE-45110: Set max-age if API request has any invalid SKUs.

--- a/docroot/modules/custom/alshaya_mobile_app/config/install/alshaya_mobile_app.settings.yml
+++ b/docroot/modules/custom/alshaya_mobile_app/config/install/alshaya_mobile_app.settings.yml
@@ -14,3 +14,4 @@ dy_plp_banner_name: 'Generic PLP banners'
 max_product_limit: 24
 listing_ignore_algolia_data: TRUE
 category_carousel_return_products: TRUE
+no_product_cache_ttl: 1200
