--- a/docroot/modules/custom/alshaya_mobile_app/config/schema/alshaya_mobile_app.settings.yml
+++ b/docroot/modules/custom/alshaya_mobile_app/config/schema/alshaya_mobile_app.settings.yml
@@ -17,3 +17,6 @@ alshaya_mobile_app.settings:
     category_carousel_return_products:
       type: boolean
       label: 'Call algolia for category carousel if config is true.'
+    no_product_cache_ttl:
+      type: integer
+      label: 'Max age to cache an invalid SKUs in seconds.'
