--- a/blt/blt.yml
+++ b/blt/blt.yml
@@ -59,7 +59,7 @@ command-hooks:
     command: 'vendor/bin/blt alshayafe:setup && vendor/bin/blt js:setup && vendor/bin/blt alshayafe:setup-uglify'
   frontend-assets:
     dir: '${repo.root}'
-    command: 'vendor/bin/blt alshayafe:build-all-themes && vendor/bin/blt alshayafe:minify-svg && vendor/bin/blt alshayafe:build-react && vendor/bin/blt js:build && vendor/bin/blt alshayafe:build-uglify'
+    command: 'vendor/bin/blt alshayafe:build-all-themes && vendor/bin/blt alshayafe:minify-svg && vendor/bin/blt alshayafe:build-react && vendor/bin/blt js:build && vendor/bin/blt alshayafe:build-uglify && vendor/bin/blt alshayafe:handlebars-build'
   pre-config-import:
     dir: '${docroot}'
     command: 'echo ''No pre-config-import configured.'''
