CORE-44605: Implementation Approach for checkout progress tracker.

--- a/docroot/modules/custom/alshaya_checkout_tracker/config/optional/block.block.checkouttrackerblock.yml
+++ b/docroot/modules/custom/alshaya_checkout_tracker/config/optional/block.block.checkouttrackerblock.yml
@@ -16,4 +16,9 @@ settings:
   label: 'Checkout tracker block'
   provider: alshaya_checkout_tracker
   label_display: '0'
-visibility: { }
+visibility: 
+  request_path:
+    id: request_path
+    negate: false
+    pages: "/cart\r\n/checkout\r\n/cart/login\r\n/checkout/confirmation"
+    context_mapping: {  }
