--- a/docroot/modules/custom/alshaya_checkout_tracker/alshaya_checkout_tracker.info.yml
+++ b/docroot/modules/custom/alshaya_checkout_tracker/alshaya_checkout_tracker.info.yml
@@ -2,4 +2,4 @@ name: Alshaya Checkout Tracker
 type: module
 description: 'Implements checkout tracker feature.'
 package: 'Alshaya'
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^9
